--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
             <div class='button'><a href="1.html">Reserve now</a></div>
             <div class="round-button">
                 <a href="youtube.com">
-                    <img src="assets/img/play-button.svg">
+                    <!-- <img src="assets/img/play-button.svg"> -->
+                    <i class="fas fa-play"></i>
                 </a>
             </div>
            <div class='button-1'><a href='1.html'>Watch our story</a></div> 
@@ -153,20 +154,39 @@
     </section>
 
     <section class="quote">
-        <div class="container">
-        <div class="row">
-            <div class="inside">
-                <div class='quote-block block'>
-                    <img src="assets/img/quote.png" alt="">
-                    <p>First i beast be fruitful open you tree all Won't can't likeness and you're have whales creature seed to two grass life blessed you meat shall you winged under from their there he That you're one called gather make much red wherein set fourth green bearing fifth replenish given she had.</p>
-                    <div class="client-info">
-                        <img src="assets/img/client-1.png" alt="" class="thumb">
-                        <p>Jack Marsh, <span>Executive</span></p>
+                <div class="container">
+                    <div class="row">
+                        <div class="inside">
+                            <div class='quote-block block'>
+                                <img src="assets/img/quote.png" alt="">
+                                <p>First i beast be fruitful open you tree all Won't can't likeness and you're have whales creature seed to two grass life blessed you meat shall you winged under from their there he That you're one called gather make much red wherein set fourth green bearing fifth replenish given she had.</p>
+                                <div class="client-info">
+                                    <img src="assets/img/client-1.png" alt="" class="thumb">
+                                    <p>Jack Marsh, <span>Executive</span></p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                </div>
+                 </div>
+              <div class="item">
+                <div class="container">
+                    <div class="row">
+                        <div class="inside">
+                            <div class='quote-block block'>
+                                <img src="assets/img/quote.png" alt="">
+                                <p>First i beast be fruitful open you tree all Won't can't likeness and you're have whales creature seed to two grass life blessed you meat shall you winged under from their there he That you're one called gather make much red wherein set fourth green bearing fifth replenish given she had.</p>
+                                <div class="client-info">
+                                    <img src="assets/img/client-1.png" alt="" class="thumb">
+                                    <p>Jack Marsh, <span>Executive</span></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                 </div>
+              </div>
             </div>
-        </div>
-     </div>
+          </div>
+
      </section>
     <section class="team">
         <div class="row">
@@ -189,10 +209,10 @@
                             <h6>Joseph Austin</h6>
                             <span>Thai Message</span>
                             <div class="memb-social">
-                                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a href="#"><img src="assets/img/twitter.svg"></a>
-                                <a href="#"><img src="assets/img/telegram.svg"></a>
-                                <a href="#"><img src="assets/img/instagram.svg"></a>
+                                <a href="#"><i class="fab fa-facebook-f"></i></a> 
+                                <a href="#"><i class="fab fa-twitter"></i></a> 
+                                <a href="#"><i class="fab fa-linkedin"></i></a> 
+                                <a href="#"><i class="fab fa-instagram"></i></a> 
                             </div>
                         </div>
                     </div>
@@ -204,10 +224,10 @@
                             <h6>David Hannan</h6>
                             <span>Thai Message</span>
                             <div class="memb-social">
-                                <a href="#"><img src="assets/img/facebook.svg"></a>
-                                <a href="#"><img src="assets/img/twitter.svg"></a>
-                                <a href="#"><img src="assets/img/telegram.svg"></a>
-                                <a href="#"><img src="assets/img/instagram.svg"></a>
+                                <a href="#"><i class="fab fa-facebook-f"></i></a> 
+                                <a href="#"><i class="fab fa-twitter"></i></a> 
+                                <a href="#"><i class="fab fa-linkedin"></i></a> 
+                                <a href="#"><i class="fab fa-instagram"></i></a> 
                             </div>
                         </div>
                     </div>
@@ -219,10 +239,10 @@
                             <h6>Cheryl Harris</h6>
                             <span>Thai Message</span>
                             <div class="memb-social">
-                                <a href="#"><img src="assets/img/facebook.svg"></a>
-                                <a href="#"><img src="assets/img/twitter.svg"></a>
-                                <a href="#"><img src="assets/img/telegram.svg"></a>
-                                <a href="#"><img src="assets/img/instagram.svg"></a>
+                                <a href="#"><i class="fab fa-facebook-f"></i></a> 
+                                <a href="#"><i class="fab fa-twitter"></i></a> 
+                                <a href="#"><i class="fab fa-linkedin"></i></a> 
+                                <a href="#"><i class="fab fa-instagram"></i></a> 
                             </div>
                         </div>
                     </div>
